<resources>
    <string name="app_name">Class Work</string>
    <string name="my_calculator">My Calculator</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_0">0</string>
    <string name="sym_sum">+</string>
    <string name="sym_sub">-</string>
    <string name="sym_mul">*</string>
    <string name="sym_div">/</string>
    <string name="sym_calc">=</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="testBtn">text</string>
</resources>