<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash_screen_background"
    android:id="@+id/MainActivity"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/heading_tag"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/my_calculator"
        android:textSize="@dimen/main_keypad_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/InputView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/heading_tag"
        >
        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="@color/black"
            android:drawableBottom="@color/transparent"
            />

        <EditText
            android:id="@+id/output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:drawableBottom="@color/transparent"
            android:textColor="#CE93D8"

            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/clear_screen"
            android:text="CLS"
            android:textSize="@dimen/main_keypad_size"
            android:background="#94000000"
            />


    </LinearLayout>


    <Button
        android:id="@+id/number_1"
        app:layout_constraintTop_toBottomOf="@+id/InputView"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/number_1"
        style="@style/numeric_pad" />
    <Button
        android:id="@+id/number_2"
        app:layout_constraintTop_toBottomOf="@+id/InputView"
        app:layout_constraintStart_toEndOf="@id/number_1"
        android:text="@string/number_2"
        style="@style/numeric_pad" />
    <Button
        android:id="@+id/number_3"
        app:layout_constraintTop_toBottomOf="@+id/InputView"
        app:layout_constraintStart_toEndOf="@id/number_2"
        android:text="@string/number_3"
        style="@style/numeric_pad" />
    <Button
        android:id="@+id/number_4"
        app:layout_constraintTop_toBottomOf="@+id/number_1"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/number_4"
        style="@style/numeric_pad" />
    <Button
        android:id="@+id/number_5"
        app:layout_constraintTop_toBottomOf="@+id/number_2"
        app:layout_constraintStart_toEndOf="@id/number_4"
        android:text="@string/number_5"
        style="@style/numeric_pad" />
    <Button
        android:id="@+id/number_6"
        app:layout_constraintTop_toBottomOf="@+id/number_3"
        app:layout_constraintStart_toEndOf="@id/number_5"
        android:text="@string/number_6"
        style="@style/numeric_pad" />
    <Button
        android:id="@+id/number_7"
        app:layout_constraintTop_toBottomOf="@+id/number_4"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/number_7"
        style="@style/numeric_pad" />
    <Button
        android:id="@+id/number_8"
        app:layout_constraintTop_toBottomOf="@+id/number_5"
        app:layout_constraintStart_toEndOf="@id/number_7"
        android:text="@string/number_8"
        style="@style/numeric_pad" />
    <Button
        android:id="@+id/number_9"
        app:layout_constraintTop_toBottomOf="@+id/number_6"
        app:layout_constraintStart_toEndOf="@id/number_8"
        android:text="@string/number_9"
        style="@style/numeric_pad" />

    <Button
        android:id="@+id/number_0"
        app:layout_constraintTop_toBottomOf="@id/number_7"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/number_0"
        style="@style/numeric_pad" />

    <Button
        android:id="@+id/sumBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sym_sum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/number_3"
        app:layout_constraintTop_toBottomOf="@id/InputView"
        android:textSize="@dimen/main_keypad_size"
        />
    <Button
        android:id="@+id/subBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sym_sub"
        android:textSize="@dimen/main_keypad_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/number_6"
        app:layout_constraintTop_toBottomOf="@id/sumBtn" />

    <Button
        android:id="@+id/mulBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sym_mul"
        android:textSize="@dimen/main_keypad_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/number_9"
        app:layout_constraintTop_toBottomOf="@id/subBtn" />

    <Button
        android:id="@+id/divBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sym_div"
        android:textSize="@dimen/main_keypad_size"
        app:layout_constraintEnd_toEndOf="@+id/mulBtn"
        app:layout_constraintStart_toEndOf="@+id/number_9"

        app:layout_constraintTop_toBottomOf="@+id/mulBtn" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sym_calc"
        android:textSize="@dimen/main_keypad_size"
        app:layout_constraintEnd_toEndOf="@+id/number_9"
        app:layout_constraintStart_toEndOf="@id/number_0"
        app:layout_constraintTop_toBottomOf="@id/number_9" />

    <Button
        android:id="@+id/testBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/testBtn"
        android:textSize="@dimen/main_keypad_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="50dp"
        android:padding="25dp"
        />






</androidx.constraintlayout.widget.ConstraintLayout>