<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "@color/second_activity_bg"
    tools:context=".MainActivity2">


    <TextView
        android:id="@+id/heading_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/my_calculator"
        android:textSize="@dimen/main_keypad_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/inputPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/heading_tag">

        <EditText
            android:id="@+id/fsa_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableBottom="@color/transparent"
            android:textColor="@color/black"
            android:textSize="@dimen/input_field_size"
            android:importantForAutofill="no"
            android:inputType="number"/>

        <EditText
            android:id="@+id/fsa_output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableBottom="@color/transparent"
            android:enabled="false"
            android:importantForAutofill="no"
            android:inputType="none"
            android:textColor="#CE93D8" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/fsa_tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputPanel">


        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/fsa_number_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_1"
                android:textSize="@dimen/main_keypad_size" />

            <Button
                android:id="@+id/fsa_number_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_2"
                android:textSize="@dimen/main_keypad_size" />

            <Button
                android:id="@+id/fsa_number_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_3"
                android:textSize="@dimen/main_keypad_size"

                />

            <Button
                android:id="@+id/fsa_sumBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:text="@string/sym_sum"
                android:textSize="@dimen/main_keypad_size" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TableRow>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>